--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
         <title>AstroPong</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="http://192.168.1.13:8000/socket.io/socket.io.js"></script>
         <script src="js/phaser.min.js"></script>
-        <script src="js/game.js"></script>        
     </head>
     <body>
+        <script src="js/game.js"></script>
         <div id="gameDiv"> </div>
     </body>
 </html>
